zy: [trunk] fixed layout issues with Safari browser

--- a/css/layouts/2c-r-fixed.css
+++ b/css/layouts/2c-r-fixed.css
@@ -6,7 +6,6 @@ DESCRIPTION: Two-column 950px fixed layout with one sidebar right of content
 #main {
     width:960px;
     margin:0 auto;
-    overflow:hidden;
     position:relative;
 }
 #container {
