--- a/css/layouts/3c-fixed.css
+++ b/css/layouts/3c-fixed.css
@@ -9,7 +9,6 @@ body {
 #main {
     width:960px;
     margin:0 auto;
-    overflow:hidden;
     position:relative;
 }
 #container {
