--- a/css/layouts/3c-r-fixed.css
+++ b/css/layouts/3c-r-fixed.css
@@ -12,7 +12,6 @@ body {
 #main {
     width:960px;
     margin:0 auto;
-    overflow:hidden;
     position:relative;
 }
 #container {
