--- a/css/styles/default.css
+++ b/css/styles/default.css
@@ -101,7 +101,7 @@ img.alignleft			{ border: 3px solid #EEE; }
 
 /* search bar */
 #searchbar				{ float: right; overflow: hidden; margin: 25px 0 0; border: 4px solid #383332; background: #EFEFEF; width: 250px; padding: 5px 4px; }
-.searchform .s			{ font-family: 'Lucida Grande', Arial, Helvetica, sans-serif; font-size: 14px; border: none; background: #EFEFEF; padding: 0; margin: 0; float: left; width: 230px !important; }
+.searchform .s			{ font-family: 'Lucida Grande', Arial, Helvetica, sans-serif; font-size: 14px; border: none; background: #EFEFEF; padding: 0; margin: 0; float: left; width: 229px !important; }
 .searchform .searchsubmit { background: url(../../images/searchsubmit.gif) no-repeat; text-indent: -9000px; width: 16px; height: 16px; border: none; float: left; cursor: pointer; opacity: 0.7; color: transparent; text-transform: capitalize; }
 .searchform .searchsubmit:hover { background: url(../../images/searchsubmit.gif) no-repeat; opacity: 1; }
 
